refactor: externalize runtime configuration and isolate tests